--- a/index.html
+++ b/index.html
@@ -18,9 +18,54 @@
     <title>Gregslist</title>
   </head>
 
-  <body>
-    <header></header>
-    <main class="container-fluid"></main>
+  <body class="container-fluid">
+    <header>
+      <h1>Gregslist</h1>
+    </header>
+    <main>
+      <div class="row">
+        <div class="col-4">
+          <form>
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input
+                type="text"
+                class="form-control"
+                id="title"
+                name="title"
+                aria-describedby="auto title"
+                placeholder="Enter title"
+              />
+            </div>
+            <div class="form-group">
+              <label for="imgUrl">Image</label>
+              <input
+                type="url"
+                class="form-control"
+                id="imgUrl"
+                name="imgUrl"
+                placeholder="Enter Img Url"
+              />
+            </div>
+            <div class="form-group">
+              <label for="price">Price</label>
+              <input
+                type="number"
+                min="0.01"
+                step="0.01"
+                class="form-control"
+                id="price"
+                name="price"
+                aria-describedby="auto price"
+                placeholder="Enter price"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+      <div id="ads" class="row"></div>
+    </main>
     <footer></footer>
 
     <!-- Optional JavaScript -->
